src/objects/COFOG_L2__c.object
<CustomObject>
    <fields>
        <fullName>COFOG_L0_Long_Name__c</fullName>
        <label>COFOG L0 Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COFOG_L1_Long_Name__c</fullName>
        <label>COFOG L1 Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COFOG_L2_Long_Name__c</fullName>
        <label>COFOG L2 Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>COFOG L2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>COFOG L2 Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COFOG L2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>